// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not explode with null challenge 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeShareControls />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders with props as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeShareControls
    challenge={
      Object {
        "id": 123,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="share-control"
        >
          <CreatedButton
            quote="MapRoulette"
            url="http://127.0.0.1:3000/browse/challenges/123"
            windowHeight={400}
            windowWidth={550}
          >
            <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>
          </CreatedButton>
        </div>,
        <div
          className="share-control"
        >
          <CreatedButton
            hashtags={
              Array [
                "maproulette",
              ]
            }
            title="MapRoulette"
            url="http://127.0.0.1:3000/browse/challenges/123"
            windowHeight={400}
            windowWidth={550}
          >
            <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>
          </CreatedButton>
        </div>,
        <div
          className="share-control"
        >
          <CreatedButton
            body="http://127.0.0.1:3000/browse/challenges/123"
            onClick={[Function]}
            openWindow={false}
            subject="MapRoulette"
            url="http://127.0.0.1:3000/browse/challenges/123"
          >
            <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>
          </CreatedButton>
        </div>,
      ],
      "className": "challenge-share-controls",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <CreatedButton
            quote="MapRoulette"
            url="http://127.0.0.1:3000/browse/challenges/123"
            windowHeight={400}
            windowWidth={550}
          >
            <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>
          </CreatedButton>,
          "className": "share-control",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>,
            "quote": "MapRoulette",
            "url": "http://127.0.0.1:3000/browse/challenges/123",
            "windowHeight": 400,
            "windowWidth": 550,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />,
              "className": "share-icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "",
                "logoFillColor": "white",
                "round": true,
                "size": 26,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <CreatedButton
            hashtags={
              Array [
                "maproulette",
              ]
            }
            title="MapRoulette"
            url="http://127.0.0.1:3000/browse/challenges/123"
            windowHeight={400}
            windowWidth={550}
          >
            <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>
          </CreatedButton>,
          "className": "share-control",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>,
            "hashtags": Array [
              "maproulette",
            ],
            "title": "MapRoulette",
            "url": "http://127.0.0.1:3000/browse/challenges/123",
            "windowHeight": 400,
            "windowWidth": 550,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />,
              "className": "share-icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "",
                "logoFillColor": "white",
                "round": true,
                "size": 26,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <CreatedButton
            body="http://127.0.0.1:3000/browse/challenges/123"
            onClick={[Function]}
            openWindow={false}
            subject="MapRoulette"
            url="http://127.0.0.1:3000/browse/challenges/123"
          >
            <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>
          </CreatedButton>,
          "className": "share-control",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "body": "http://127.0.0.1:3000/browse/challenges/123",
            "children": <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>,
            "onClick": [Function],
            "openWindow": false,
            "subject": "MapRoulette",
            "url": "http://127.0.0.1:3000/browse/challenges/123",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />,
              "className": "share-icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "",
                "logoFillColor": "white",
                "round": true,
                "size": 26,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="share-control"
          >
            <CreatedButton
              quote="MapRoulette"
              url="http://127.0.0.1:3000/browse/challenges/123"
              windowHeight={400}
              windowWidth={550}
            >
              <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>
            </CreatedButton>
          </div>,
          <div
            className="share-control"
          >
            <CreatedButton
              hashtags={
                Array [
                  "maproulette",
                ]
              }
              title="MapRoulette"
              url="http://127.0.0.1:3000/browse/challenges/123"
              windowHeight={400}
              windowWidth={550}
            >
              <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>
            </CreatedButton>
          </div>,
          <div
            className="share-control"
          >
            <CreatedButton
              body="http://127.0.0.1:3000/browse/challenges/123"
              onClick={[Function]}
              openWindow={false}
              subject="MapRoulette"
              url="http://127.0.0.1:3000/browse/challenges/123"
            >
              <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>
            </CreatedButton>
          </div>,
        ],
        "className": "challenge-share-controls",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <CreatedButton
              quote="MapRoulette"
              url="http://127.0.0.1:3000/browse/challenges/123"
              windowHeight={400}
              windowWidth={550}
            >
              <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>
            </CreatedButton>,
            "className": "share-control",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>,
              "quote": "MapRoulette",
              "url": "http://127.0.0.1:3000/browse/challenges/123",
              "windowHeight": 400,
              "windowWidth": 550,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />,
                "className": "share-icon",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "",
                  "logoFillColor": "white",
                  "round": true,
                  "size": 26,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "span",
            },
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <CreatedButton
              hashtags={
                Array [
                  "maproulette",
                ]
              }
              title="MapRoulette"
              url="http://127.0.0.1:3000/browse/challenges/123"
              windowHeight={400}
              windowWidth={550}
            >
              <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>
            </CreatedButton>,
            "className": "share-control",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>,
              "hashtags": Array [
                "maproulette",
              ],
              "title": "MapRoulette",
              "url": "http://127.0.0.1:3000/browse/challenges/123",
              "windowHeight": 400,
              "windowWidth": 550,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />,
                "className": "share-icon",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "",
                  "logoFillColor": "white",
                  "round": true,
                  "size": 26,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "span",
            },
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <CreatedButton
              body="http://127.0.0.1:3000/browse/challenges/123"
              onClick={[Function]}
              openWindow={false}
              subject="MapRoulette"
              url="http://127.0.0.1:3000/browse/challenges/123"
            >
              <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>
            </CreatedButton>,
            "className": "share-control",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "body": "http://127.0.0.1:3000/browse/challenges/123",
              "children": <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>,
              "onClick": [Function],
              "openWindow": false,
              "subject": "MapRoulette",
              "url": "http://127.0.0.1:3000/browse/challenges/123",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />,
                "className": "share-icon",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "",
                  "logoFillColor": "white",
                  "round": true,
                  "size": 26,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "span",
            },
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders with props className in encapsulating div 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeShareControls
    challenge={
      Object {
        "id": 123,
      }
    }
    className="my-test"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="share-control"
        >
          <CreatedButton
            quote="MapRoulette"
            url="http://127.0.0.1:3000/browse/challenges/123"
            windowHeight={400}
            windowWidth={550}
          >
            <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>
          </CreatedButton>
        </div>,
        <div
          className="share-control"
        >
          <CreatedButton
            hashtags={
              Array [
                "maproulette",
              ]
            }
            title="MapRoulette"
            url="http://127.0.0.1:3000/browse/challenges/123"
            windowHeight={400}
            windowWidth={550}
          >
            <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>
          </CreatedButton>
        </div>,
        <div
          className="share-control"
        >
          <CreatedButton
            body="http://127.0.0.1:3000/browse/challenges/123"
            onClick={[Function]}
            openWindow={false}
            subject="MapRoulette"
            url="http://127.0.0.1:3000/browse/challenges/123"
          >
            <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>
          </CreatedButton>
        </div>,
      ],
      "className": "challenge-share-controls my-test",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <CreatedButton
            quote="MapRoulette"
            url="http://127.0.0.1:3000/browse/challenges/123"
            windowHeight={400}
            windowWidth={550}
          >
            <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>
          </CreatedButton>,
          "className": "share-control",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>,
            "quote": "MapRoulette",
            "url": "http://127.0.0.1:3000/browse/challenges/123",
            "windowHeight": 400,
            "windowWidth": 550,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />,
              "className": "share-icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "",
                "logoFillColor": "white",
                "round": true,
                "size": 26,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <CreatedButton
            hashtags={
              Array [
                "maproulette",
              ]
            }
            title="MapRoulette"
            url="http://127.0.0.1:3000/browse/challenges/123"
            windowHeight={400}
            windowWidth={550}
          >
            <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>
          </CreatedButton>,
          "className": "share-control",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>,
            "hashtags": Array [
              "maproulette",
            ],
            "title": "MapRoulette",
            "url": "http://127.0.0.1:3000/browse/challenges/123",
            "windowHeight": 400,
            "windowWidth": 550,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />,
              "className": "share-icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "",
                "logoFillColor": "white",
                "round": true,
                "size": 26,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <CreatedButton
            body="http://127.0.0.1:3000/browse/challenges/123"
            onClick={[Function]}
            openWindow={false}
            subject="MapRoulette"
            url="http://127.0.0.1:3000/browse/challenges/123"
          >
            <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>
          </CreatedButton>,
          "className": "share-control",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "body": "http://127.0.0.1:3000/browse/challenges/123",
            "children": <span
              className="share-icon"
            >
              <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />
            </span>,
            "onClick": [Function],
            "openWindow": false,
            "subject": "MapRoulette",
            "url": "http://127.0.0.1:3000/browse/challenges/123",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                className=""
                logoFillColor="white"
                round={true}
                size={26}
              />,
              "className": "share-icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "",
                "logoFillColor": "white",
                "round": true,
                "size": 26,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="share-control"
          >
            <CreatedButton
              quote="MapRoulette"
              url="http://127.0.0.1:3000/browse/challenges/123"
              windowHeight={400}
              windowWidth={550}
            >
              <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>
            </CreatedButton>
          </div>,
          <div
            className="share-control"
          >
            <CreatedButton
              hashtags={
                Array [
                  "maproulette",
                ]
              }
              title="MapRoulette"
              url="http://127.0.0.1:3000/browse/challenges/123"
              windowHeight={400}
              windowWidth={550}
            >
              <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>
            </CreatedButton>
          </div>,
          <div
            className="share-control"
          >
            <CreatedButton
              body="http://127.0.0.1:3000/browse/challenges/123"
              onClick={[Function]}
              openWindow={false}
              subject="MapRoulette"
              url="http://127.0.0.1:3000/browse/challenges/123"
            >
              <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>
            </CreatedButton>
          </div>,
        ],
        "className": "challenge-share-controls my-test",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <CreatedButton
              quote="MapRoulette"
              url="http://127.0.0.1:3000/browse/challenges/123"
              windowHeight={400}
              windowWidth={550}
            >
              <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>
            </CreatedButton>,
            "className": "share-control",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>,
              "quote": "MapRoulette",
              "url": "http://127.0.0.1:3000/browse/challenges/123",
              "windowHeight": 400,
              "windowWidth": 550,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />,
                "className": "share-icon",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "",
                  "logoFillColor": "white",
                  "round": true,
                  "size": 26,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "span",
            },
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <CreatedButton
              hashtags={
                Array [
                  "maproulette",
                ]
              }
              title="MapRoulette"
              url="http://127.0.0.1:3000/browse/challenges/123"
              windowHeight={400}
              windowWidth={550}
            >
              <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>
            </CreatedButton>,
            "className": "share-control",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>,
              "hashtags": Array [
                "maproulette",
              ],
              "title": "MapRoulette",
              "url": "http://127.0.0.1:3000/browse/challenges/123",
              "windowHeight": 400,
              "windowWidth": 550,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />,
                "className": "share-icon",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "",
                  "logoFillColor": "white",
                  "round": true,
                  "size": 26,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "span",
            },
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <CreatedButton
              body="http://127.0.0.1:3000/browse/challenges/123"
              onClick={[Function]}
              openWindow={false}
              subject="MapRoulette"
              url="http://127.0.0.1:3000/browse/challenges/123"
            >
              <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>
            </CreatedButton>,
            "className": "share-control",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "body": "http://127.0.0.1:3000/browse/challenges/123",
              "children": <span
                className="share-icon"
              >
                <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />
              </span>,
              "onClick": [Function],
              "openWindow": false,
              "subject": "MapRoulette",
              "url": "http://127.0.0.1:3000/browse/challenges/123",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Icon
                  className=""
                  logoFillColor="white"
                  round={true}
                  size={26}
                />,
                "className": "share-icon",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "",
                  "logoFillColor": "white",
                  "round": true,
                  "size": 26,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "span",
            },
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
